--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ cryptography==43.0.0
 dj-database-url==2.2.0
 Django==5.1
 django-allauth==64.2.1
+gunicorn==23.0.0
 idna==3.8
+packaging==24.1
 psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.9.0
